use requestLegacyExternalStorage for storage in AndroidManifest.xml
set Typeface for AlertMessages in BaseActivity.java

update gradle plugin

set Max Length for Plaque EditTexts

fix LocaleWrapper.java default locale bug

change default locale in preferences.xml

--- a/app/src/main/res/layout/dialog_new_car.xml
+++ b/app/src/main/res/layout/dialog_new_car.xml
@@ -80,6 +80,7 @@
                         android:layout_height="match_parent"
                         android:inputType="text"
                         android:singleLine="true"
+                        android:maxLength="15"
                         android:textColor="?attr/editTextTextColor" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,6 +101,7 @@
                         android:layout_height="match_parent"
                         android:imeOptions="actionDone"
                         android:inputType="text"
+                        android:maxLength="15"
                         android:singleLine="true"
                         android:textColor="?attr/editTextTextColor" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -262,6 +264,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:inputType="text"
+                            android:maxLength="1"
                             android:singleLine="true"
                             android:textColor="?attr/editTextTextColor" />
                     </com.google.android.material.textfield.TextInputLayout>
